k8s/base/apigateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: apigateway
  ports:
    - name: http
      port: 8000
      targetPort: 8000
